fixed up the position: fixed for navigation - stretch goal

--- a/css/index.css
+++ b/css/index.css
@@ -150,10 +150,16 @@ h5 {
     max-width: 500px;
   }
 }
+.spacer {
+  width: 100%;
+  height: 95px;
+}
 .main-navigation {
   width: 100%;
   height: 120px;
   background: #f6f6f6;
+  position: fixed;
+  margin-bottom: 100px;
 }
 .main-navigation .nav-container {
   height: 100%;
