--- a/less/global.less
+++ b/less/global.less
@@ -22,3 +22,9 @@ h1, h2, h3, h4, h5 {
   }
 }
 
+.spacer
+{
+    width: 100%;
+    height: 95px;
+}
+
