--- a/less/navigation.less
+++ b/less/navigation.less
@@ -2,6 +2,8 @@
   width: 100%;
   height: 120px;
   background: @nav-bg;
+  position: fixed;
+  margin-bottom: 100px;
   .nav-container {
     height: 100%;
     display: flex;
